--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.2",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.3"
   }
 }
