--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.30.0",
     "@dicebear/collection": "^9.2.4",
     "@dicebear/core": "^9.2.4",
-    "@emotion/react": "^11.14.0",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "next": "16.1.1",
@@ -32,6 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "husky": "^9.1.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
